Details
-
Bug
-
Status: Closed (View Workflow)
-
Critical
-
Resolution: Fixed
-
10.4(EOL), 10.5(EOL), 10.6(EOL), 10.9(EOL), 10.10(EOL), 10.11, 11.0(EOL), 11.1(EOL), 11.2(EOL), 11.3(EOL)
-
None
Description
# mysqld options required for replay: --innodb-log-buffer-size=1125899906842624 |
Leads to:
|
11.3.0 8ad1e26b1bafa4ed9928306efc10c047f2274108 (Debug) |
Core was generated by `/test/MD080923-mariadb-11.3.0-linux-x86_64-dbg/bin/mariadbd --no-defaults --sql'.
|
Program terminated with signal SIGSEGV, Segmentation fault.
|
#0 __memset_avx2_erms ()
|
at ../sysdeps/x86_64/multiarch/memset-vec-unaligned-erms.S:151
|
[Current thread is 1 (Thread 0x1472eeddf980 (LWP 2676706))]
|
(gdb) bt
|
#0 __memset_avx2_erms () at ../sysdeps/x86_64/multiarch/memset-vec-unaligned-erms.S:151
|
#1 0x000055b01b074e0c in memset (__len=<optimized out>, __ch=165, __dest=<optimized out>) at /usr/include/x86_64-linux-gnu/bits/string_fortified.h:71
|
#2 log_t::create (this=0x55b01c7fee80 <log_sys>) at /test/11.3_dbg/storage/innobase/log/log0log.cc:113
|
#3 0x000055b01b1c37ad in srv_start (create_new_db=<optimized out>) at /test/11.3_dbg/storage/innobase/srv/srv0start.cc:1349
|
#4 0x000055b01afe9278 in innodb_init (p=<optimized out>) at /test/11.3_dbg/storage/innobase/handler/ha_innodb.cc:4171
|
#5 0x000055b01ace073c in ha_initialize_handlerton (plugin=0x55b01cee5800) at /test/11.3_dbg/sql/handler.cc:688
|
#6 0x000055b01a9fc6f6 in plugin_initialize (tmp_root=tmp_root@entry=0x7ffd9debdfa0, plugin=plugin@entry=0x55b01cee5800, argc=argc@entry=0x55b01bfc0020 <remaining_argc>, argv=argv@entry=0x55b01ce2f568, options_only=<optimized out>) at /test/11.3_dbg/sql/sql_plugin.cc:1465
|
#7 0x000055b01a9fdd10 in plugin_init (argc=argc@entry=0x55b01bfc0020 <remaining_argc>, argv=<optimized out>, flags=0) at /test/11.3_dbg/sql/sql_plugin.cc:1758
|
#8 0x000055b01a8b3aba in init_server_components () at /test/11.3_dbg/sql/mysqld.cc:5271
|
#9 0x000055b01a8b97dd in mysqld_main (argc=<optimized out>, argv=<optimized out>) at /test/11.3_dbg/sql/mysqld.cc:5900
|
#10 0x000055b01a8adb76 in main (argc=<optimized out>, argv=<optimized out>) at /test/11.3_dbg/sql/main.cc:34
|
Bug confirmed present in:
MariaDB: 10.4.32 (dbg), 10.4.32 (opt), 10.5.23 (dbg), 10.5.23 (opt), 10.6.16 (dbg), 10.6.16 (opt), 10.9.8 (dbg), 10.9.8 (opt), 10.10.7 (dbg), 10.10.7 (opt), 10.11.6 (dbg), 10.11.6 (opt), 11.0.4 (dbg), 11.0.4 (opt), 11.1.3 (dbg), 11.1.3 (opt), 11.2.2 (dbg), 11.2.2 (opt), 11.3.0 (dbg), 11.3.0 (opt)
Attachments
Issue Links
- relates to
-
MDEV-24269 SIGSEGV in __memset_avx2_erms AND in mach_write_to_4 AND InnoDB: Failing assertion: ptr != NULL, all FROM log_t::create
-
- Closed
-