MDEV-32364 Server crashes when starting server with high innodb_log_buffer_size

log_t::create(): Return whether the initialisation succeeded.
It may fail if too large an innodb_log_buffer_size is specified.